--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <title>Disa</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
 
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
